<resources>
    <string name="app_name">GeofenceAreaTask</string>
    <string name="wifi">Wi-Fi</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="radius_in_meters">Radius in meters</string>
    <string name="wifi_network_name">Wi-Fi network name</string>
    <string name="inside">Inside</string>
    <string name="outside">Outside</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="check">Check</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="place_picker">Place picker</string>
</resources>
